--- a/music/build.gradle
+++ b/music/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.2.0'
     apt 'com.jakewharton:butterknife-compiler:8.2.0'
     compile 'com.lovedise:permissiongen:0.0.6'
+    compile 'com.android.support:recyclerview-v7:25.0.0'
     testCompile 'junit:junit:4.12'
 }
