添加主界面，progress动画，pop进出动画

--- a/music/src/main/AndroidManifest.xml
+++ b/music/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".MusicService"></service>
+        <service android:name=".MusicService" />
+
+        <activity android:name=".MusicActivity"></activity>
     </application>
+
 </manifest>
