修改主界面,观察者模式,平滑移动

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':radio', ':carLib', ':clancher', ':music', ':videoRecorder'
+include ':app', ':radio', ':carLib', ':clancher', ':music', ':videoRecorder', ':utillib'
 include ':apiDemos'
